environments/istio/basic-demo/3-clusterservices-config/base/active/kiali-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts:
  - "kiali-local.glootest.com"
  gateways:
  - istio-system/https-gateway
  http:
  - route:
    - destination:
        host: kiali
        port:
          number: 20001
